# I-Form_Server_Node_Deployer

./: .gitignore  LICENSE  README.md  autoignition.py  automated_webapp.py  cli.py  client_stdout.py  config.py  config.toml  create_disk.py  create_img.py  debug.py  main.py  mkdocs.yaml  netlify.toml  node_deployer.py  pyproject.toml  utils.py
docker/: validate.dockerfile
docs/: commands.md  configuration.md  deployment.md  index.md  installation.md  uml.md  usage.md
docs/assets/: classes.mmd  packages.mmd
docs/src/: autoignition.md  cli.md  config.md  create_disk.md  create_img.md  debug.md  ip_interface.md  utils.md
scripts/: docs.py  installs.sh
src/: autoignition.py  config.py  create_disk.py  create_img.py  debug.py  main.py  node_deployer.py  utils.py
src/docker/: fuel-ignition.dockerfile  validate.dockerfile
src/node_deployer/: __init__.py  __main__.py  autoignition.py  cli.py  config.py  create_disk.py  create_img.py  debug.py  ip_interface.py  node_deployer.py  utils.py
src/node_deployer_gui/: __init__.py  __main__.py  disk_dropdown.py  gui.py  types.py
src/scripts/: fetch_config.sh  validate.sh
src/templates/: fuelignition.json  join_swarm.sh
templates/: join_swarm.service
tests/: test_node_deployer.py
tests/data/node_deployer/: config.ign  fuelignition.json  test_args.toml
tests/data/node_deployer/create_disk/: validation_result.pkl
tests/data/node_deployer/create_img/: apply_ignition_settings.pkl
tests/test_node_deployer/: __init__.py  test_autoignition.py  test_create_img.py
tests/test_node_deployer/data/: config.ign  fuelignition.json
tests/test_node_deployer/data/create_img/: apply_ignition_settings.pkl  load_template.pkl
