[tool.poetry]
name = "i-form-server-node-deployer"
version = "0.1.0"
description = ""
authors = ["Cian Hughes <cian.hughes@dcu.ie>"]
readme = "README.md"
packages = [
    {include = "node_deployer", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
selenium = "^4.14.0"
mechanicalsoup = "^1.3.0"
docker = "^6.1.3"
requests = "^2.31.0"
gitpython = "^3.1.40"
fsspec = "^2023.10.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.1"
black = "^23.10.1"
snoop = "^0.4.3"
pytest = "^7.4.3"

[tool.poetry.scripts]
node_deployer = "node_deployer.__main__:main"
debug_node_deployer = "node_deployer.__main__:debug"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 100
select = ["E", "F"]

[tool.ruff.isort]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"